force-app/main/default/objects/Oportunidad_Competidor_Socio__c/Oportunidad_Competidor_Socio__c.object-meta.xml
<CustomObject>
    <label>Oportunidad-Socio</label>
    <nameField>
        <displayFormat>OCS-{0000}</displayFormat>
        <label>Nombre de Oportunidad-Socio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oportunidades-Socios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>