force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Aprobacion_Finanzas__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Finanzas__c</fullName>
    <label>Aprobación Finanzas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>No aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>