force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Aprobador_Compliance_Id__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Compliance_Id__c</fullName>
    <formula>Oportunidad__r.Director_Compliance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprobador Compliance Id</label>
    <type>Text</type>
</CustomField>