force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Aprobador_Finanzas__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Finanzas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Finanzas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades_Socios1</relationshipName>
    <type>Lookup</type>
</CustomField>