force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Codigo_OC__c.field-meta.xml
<CustomField>
    <fullName>Codigo_OC__c</fullName>
    <formula>Oportunidad__r.Codigo_OC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Oportunidad Comercial</label>
    <type>Text</type>
</CustomField>