force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Competidor_Socio__c.field-meta.xml
<CustomField>
    <fullName>Competidor_Socio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Socio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Competidor_Socio__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Socio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Competidor_Socio__c</referenceTo>
    <relationshipLabel>Oportunidad-Socio</relationshipLabel>
    <relationshipName>Oportunidades_Competidores_Socios</relationshipName>
    <type>Lookup</type>
</CustomField>