force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Oportunidad_Socio__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Socio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad-Socio</label>
    <referenceTo>Oportunidad_Competidor_Socio__c</referenceTo>
    <relationshipLabel>Oportunidades-Socios</relationshipLabel>
    <relationshipName>Oportunidades_Socios</relationshipName>
    <type>Lookup</type>
</CustomField>