force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities-Partners</relationshipLabel>
    <relationshipName>Opportunities_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>