force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Participacion_Socio__c.field-meta.xml
<CustomField>
    <fullName>Participacion_Socio__c</fullName>
    <label>% Participación</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>