force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Pertenece_socio_Ayesa__c.field-meta.xml
<CustomField>
    <fullName>Pertenece_socio_Ayesa__c</fullName>
    <formula>IF(   Competidor_Socio__r.Pertenece_a_Ayesa__c =true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Pertenece socio a Ayesa?</label>
    <type>Checkbox</type>
</CustomField>