force-app/main/default/objects/Oportunidad_Competidor_Socio__c/fields/Solicitar_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitar aprobación</label>
    <type>Checkbox</type>
</CustomField>