force-app/main/default/objects/Oportunidad_Competidor_Socio__c/recordTypes/Socio.recordType-meta.xml
<RecordType>
    <fullName>Socio</fullName>
    <active>true</active>
    <label>Socio</label>
</RecordType>