force-app/main/default/objects/Oportunidad_Competidor_Socio__c/recordTypes/Subcontrata.recordType-meta.xml
<RecordType>
    <fullName>Subcontrata</fullName>
    <active>true</active>
    <label>Subcontratación</label>
</RecordType>